--- a/HR.LeaveManagement.Api/HR.LeaveManagement.Api.csproj
+++ b/HR.LeaveManagement.Api/HR.LeaveManagement.Api.csproj
@@ -26,7 +26,7 @@
     <ItemGroup>
       <ProjectReference Include="..\HR.LeaveManagement.Application\HR.LeaveManagement.Application.csproj" />
       <ProjectReference Include="..\HR.LeaveManagement.Infrastructure\HR.LeaveManagement.Infrastructure.csproj" />
-      <ProjectReference Include="..\HR.LeaveManagement.Persistance\HR.LeaveManagement.Persistence.csproj" />
+      <ProjectReference Include="..\HR.LeaveManagement.Persistence\HR.LeaveManagement.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
