fixed docker setup

--- a/src/HR.LeaveManagement.Api/appsettings.json
+++ b/src/HR.LeaveManagement.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HrDatabaseConnectionString": "Server=localhost,1433;Database=db_hr_leavemanagement;User Id=sa;Password=P@ssword2025;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "HrDatabaseConnectionString": "Server=hr.leavemanagement.db,1433;Database=db_hr_leavemanagement;User Id=sa;Password=P@ssword2025;Encrypt=true;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "EmailSettings": {
     "ApiKey": "SendGridApiKey",
