--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
 #      - dbnet
     ports:
       - "5000:5000"
-      - "5001:5001"
+#      - "5001:5001"
 
     depends_on:
-      - hrleavemanagementdb
+      - hr.leavemanagement.db
   
-  hrleavemanagementdb:
+  hr.leavemanagement.db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: hrleavemanagementdb
     environment:
