--- a/src/HR.LeaveManagement.Api/Dockerfile
+++ b/src/HR.LeaveManagement.Api/Dockerfile
@@ -25,7 +25,7 @@ RUN dotnet build "./HR.LeaveManagement.Api.csproj" -c $BUILD_CONFIGURATION -o /a
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Development
-RUN dotnet publish "./HR.LeaveManagement.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
+RUN dotnet publish "./HR.LeaveManagement.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
